# anime-rank-track

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  flake.nix  justfile  pyproject.toml  rust-toolchain.toml
.github/workflows/: build.yml
cli/: Cargo.toml
spider/: Cargo.toml
util/: Cargo.toml
