[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
util = { path = "../util" }
spider = { path = "../spider" }
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.10"
config = "0.14.1"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
miette = { version = "7.3.0", features = ["fancy"] }
ariadne = "0.5.0"
